[project]
name = "streamlit-rag-llm-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "langchain>=1.0.1",
    "langchain-chroma>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "ollama>=0.6.0",
    "pymupdf4llm>=0.0.27",
    "streamlit>=1.50.0",
    "torch==2.2.2",
    "transformers>=4.57.1",
]
